# rust-capr

./: .gitignore  Cargo.toml  devenv.nix  dot_fix.py  flake.nix  index.html  index.ts  input.ts  laws.pl  package.json  readme.org  types.ts
.devcontainer/: devcontainer.json
.github/workflows/: static.yml
docs/: bib.bib  bib.yaml  fst.md  main.typ  template.typ
frontend/: CreateSoundLaw.ts  FileArea.ts  ForwardBackwards.ts  Main.ts  SaveButton.ts  SoundClassArea.ts  SoundLawDisplay.ts  main.ts  render.ts  types.ts  update.ts
frontend/src/: App.js
src/: character_class.rs  cross_product.rs  lib.rs  main.rs  negate.rs  regex.rs  sound_law.rs  tables.rs  trans.rs
tests/: celtic.rs
