[package]
name = "rust-capr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
ipa-translate = "0.2.0"
rustfst = "1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.50"
